[package]
name = "adventofcode-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = { version = "1.6.1", optional = true }

[features]
default = ["multiprocessing"]
debug = []
multiprocessing = ["rayon"]

